--- a/views/help.haml
+++ b/views/help.haml
@@ -34,3 +34,15 @@
     %pre connect 176.9.138.143:27100
     %p But you can use the friendly name of that IP as well:
     %pre connect fakkelbrigade.eu:27100
+
+.row
+  .span7
+    %h4 I found a bug!
+    %p 
+      Please report it on 
+      %a{:href => "https://github.com/Arie/relay/issues"}
+        Github
+.row
+  .span7
+    %h4 My question isn't listed here
+    %p Contact Arie on Quakenet
