--- a/views/help.haml
+++ b/views/help.haml
@@ -2,6 +2,11 @@
 
 .row
   .span7
+    %h4 I see a bunch of relays but I haven't even started one yet.
+    %p Currently the web interface only has one list of relays and it doesn't know which ones are yours. So please take care before you kill a relay.
+
+.row
+  .span7
     %h4 Lots of 'Invalid password' messages
     %p You forgot to enter the relaypassword, or maybe the server admin gave you the wrong one. Ask for the tv_relaypassword and tv_password of the server and try them both.
 
