updated help pages to reflect new index screen

--- a/views/help.haml
+++ b/views/help.haml
@@ -23,6 +23,7 @@
 .row
   .span7
     %h4 What's the connect info for my relay?
+    %p After a relay is connected properly the index screen will show the ip:port of the relay, alternatively, you could look at the status screen.
     %p If you open the status screen for your relay you can see the connect info as follows:
     %pre
       :preserve
